--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,22 @@
 .App {
   text-align: center;
+  flex-direction: column;
+  font-size: 10px;
+  color: beige;
+  background-color: #282c34;
+
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+@media (max-width: 996px) {
+  .App {
+    flex-direction: column;
+    background-color: #282c34;
+  }
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
